Next arrival is calculated.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/locale/af.js"></script>
-
-
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
 </head>
 
@@ -50,10 +48,10 @@
 
             Destination<br>
             <input type="text" name="destination" placeholder="Koopa Troopa Beach" id="destination"><br>
-            
-            First train time (HH:mm - military time):<br>
-            <input type="time" name="time" placeholder="19:30" id="firstTrain"><br>
-            
+
+            First train time:<br>
+            <input type="time" name="time" id="firstTrain"><br>
+
             Frequency (minutes):<br>
             <input type="number" name="frequency" placeholder="5" id="frequency"><br>
             <input type="submit" id="submit">
